# DocScanner

./: ..csproj  .gitignore  Alegeri_prezidentiale_turul_2.ipynb  Dockerfile  Program.cs  appsettings.json  docker-compose.yml
Controllers/: AdminController.cs
Migrations/: 20250526183120_InitialCreate.Designer.cs  20250526183120_InitialCreate.cs  ApplicationDbContextModelSnapshot.cs
Models/: RomanianIdRecord.cs
OCRMicroService/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
Services/: IOcrService.cs  TesseractOcrService.cs
Views/Admin/: Upload.cshtml
Views/Shared/: _Layout.cshtml
backend/: .gitignore  DocScanner.csproj  DocScanner.sln  Dockerfile  Program.cs  appsettings.Production.json  appsettings.json
backend/Controllers/: AdminApiController.cs  AdminController.cs  AuthController.cs  MenuItemsController.cs  ReviewerApiController.cs  RomanianIdRecordsController.cs  UserApiController.cs  UserSettingsController.cs
backend/Data/: ApplicationDbContext.cs  DbSeeder.cs
backend/Migrations/: 20250526183120_InitialCreate.Designer.cs  20250526183120_InitialCreate.cs  20250526195852_UpdatedRomanianRecordId.Designer.cs  20250526195852_UpdatedRomanianRecordId.cs  20250527080303_UpdatedOcrResponse.Designer.cs  20250527080303_UpdatedOcrResponse.cs  20250527141513_RemovedJudetFromIdRecord.Designer.cs  20250527141513_RemovedJudetFromIdRecord.cs  20250527162216_AddedCetatenieToRecord.Designer.cs  20250527162216_AddedCetatenieToRecord.cs  20250527185706_AddValiditate.Designer.cs  20250527185706_AddValiditate.cs  (+27 more)
frontend/: Dockerfile  package.json
(+47 files in other folders)
